// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 1d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
  ],
  "days": [
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    3,
  ],
  "totalUniqueReceivers": [
    2,
  ],
  "totalUniqueSenders": [
    3,
  ],
}
`;

exports[`getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 7d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
  ],
  "days": [
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    2,
  ],
  "totalUniqueSenders": [
    2,
    3,
  ],
}
`;

exports[`getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 15d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
  ],
  "days": [
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    5,
    2,
    3,
  ],
}
`;

exports[`getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 30d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
    100,
  ],
  "days": [
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    1,
    5,
    2,
    3,
  ],
}
`;

exports[`getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 90d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
    100,
  ],
  "days": [
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    1,
    5,
    2,
    3,
  ],
}
`;

exports[`getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 180d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
    100,
    100,
  ],
  "days": [
    2023-05-10T00:00:00.000Z,
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    1,
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    1,
    1,
    5,
    2,
    3,
  ],
}
`;

exports[`getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 365d 1`] = `
{
  "avgMaxBlobGasFees": [
    110,
    100,
    100,
    100,
    100,
    100,
  ],
  "days": [
    2022-10-16T00:00:00.000Z,
    2023-05-10T00:00:00.000Z,
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    3,
    1,
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    3,
    1,
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    3,
    1,
    1,
    5,
    2,
    3,
  ],
}
`;

exports[`getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for All 1`] = `
{
  "avgMaxBlobGasFees": [],
  "days": [],
  "totalTransactions": [],
  "totalUniqueReceivers": [],
  "totalUniqueSenders": [],
}
`;
